fix device width

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
       .wrapper {
 	  place-items: center;
 	  display: grid;
-	  margin-left: auto;
-	  margin-right: auto;
+	  margin-left: 0px;
+	  margin-right: 0px;
       }
       .typing-demo {
 	  width: 24ch;
-	  margin-left: auto;
-	  margin-right: auto;
+	  margin-left: 0px;
+	  margin-right: 0px;
 	  animation: typing 3s steps(24),
 		     blink 5s step-end infinite alternate;
 	  white-space: nowrap;
@@ -25,6 +25,7 @@
 	  border-right: 3px solid;
 	  font-family: Georgia, serif;
 	  font-size: 50px;
+	  place-items: center;
       }
       @keyframes typing {
 	  from {
