fixing typing-demo width

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 	  overflow: hidden;
 	  border-right: 3px solid;
 	  font-family: Georgia, serif;
-	  font-size: 50px;
-	  place-items: center;
+	  font-size: 30px;
       }
       @keyframes typing {
 	  from {
 	      width: 0;
+	      text-align: center;
 	  }
       }
       @keyframes blink {
@@ -99,8 +99,11 @@
   <body>
     <div class='wrapper'>
       <div class='typing-demo'>
-	<h1>The American Naturalist</h1><br>
+	<h1>The American</h1>
+	<h1>Naturalist</h1><br><br>
       </div>
+    </div>
+    <div>
       <h2>Beyond Microsoft:<br>A Series of YouTube Shorts<br><br><br>ASN Graduate Council</h2>
     </div>
     <h3>Xinyi Yan, University of Texas, Austin<br>Nikunj Goel, University of Texas, Austin<br>Chris Robinson, Indiana University<br>Sarah McPeek, University of Virginia<br>Sajesh Vijayan, IISER Thiruvananthapuram<br>Dylan Padilla, Arizona State University</h3>
