fixing typing-demo width

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	  overflow: hidden;
 	  border-right: 3px solid;
 	  font-family: Georgia, serif;
-	  font-size: 50px;
+	  font-size: 35px;
       }
       @keyframes typing {
 	  from {
@@ -41,7 +41,7 @@
 	  font-family: Georgia, serif;
 	  text-align: center;
 	  font-style: italic;
-	  font-size: 50px;
+	  font-size: 35px;
       }
       h2 {
 	  position: relative;
@@ -50,7 +50,7 @@
 	  font-family: Georgia, serif;
 	  text-align: center;
 	  font-style: italic;
-	  font-size: 45px;
+	  font-size: 35px;
       }
       h3 {
 	  position: relative;
@@ -67,7 +67,7 @@
 	  margin-right: auto;
 	  opacity: 0;
 	  position: relative;
-	  top: 200px;
+	  top: 300px;
 	  animation: 450ms bounceIn Linear forwards;
       }
       img {
@@ -96,12 +96,11 @@
   <body>
     <div class='wrapper'>
       <div class='typing-demo'>
-	<h1>The American</h1>
-	<h1>Naturalist</h1><br>
+	<h1>The American Naturalist</h1><br><br>
       </div>
     </div>
     <div>
-      <h2>Beyond Microsoft:<br>A Series of YouTube Shorts<br><br>ASN Graduate Council</h2>
+      <h2>Beyond Microsoft:<br>A Series of YouTube Shorts<BR><br><br>ASN Graduate Council</h2><br><br>
     </div>
     <h3>Xinyi Yan, University of Texas, Austin<br>Nikunj Goel, University of Texas, Austin<br>Chris Robinson, Indiana University<br>Sarah McPeek, University of Virginia<br>Sajesh Vijayan, IISER Thiruvananthapuram<br>Dylan Padilla, Arizona State University</h3>
     <div>
